# advent_of_code

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
advent_of_code/: core.py  exceptions.py  grids.py  parsers.py  recipes.py  screen.py  settings.py  type_defs.py  utilities.py
advent_of_code/_cli/: aoc.py
advent_of_code/algorithms/: astar.py  bfs.py  dykstra.py
advent_of_code/solutions/year1900/: day_01.py
advent_of_code/solutions/year2022/: README.md  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py
advent_of_code/solutions/year2023/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_07_micro.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py
advent_of_code/solutions/year2024/: day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py
advent_of_code/solutions/year2025/: day_01.py  day_02.py  day_03.py  day_04.py  day_04_viz.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_09_viz.py  day_10.py  day_11.py  day_12.py
src/advent_of_code/: core.py  exceptions.py  screen.py  settings.py  type_defs.py  utilities.py
src/advent_of_code/_cli/: aoc.py  hello_world.py
src/advent_of_code/parsers/: __init__.py
src/advent_of_code/solutions/year1900/: day_01.py
test/: test_grids.py  test_parsers.py  test_recipes.py
test/algorithms/: test_astar.py
