[tool.black]
line-length = 88

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]


[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true


[[tool.mypy.overrides]]
module = "src.advent_of_code._cli.aoc"
disallow_untyped_decorators = false


[[tool.mypy.overrides]]
module = "test.*"
check_untyped_defs = false
disallow_untyped_defs = false
