[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 88

[tool.ruff]
exclude = ["./build", ".hatch", ".venv", "private"]
indent-width = 4
line-length = 88

[tool.ruff.lint]
exclude = ["./build", ".hatch", ".venv", "private"]
select = ["A", "B", "C", "E4", "E7", "E9", "F", "I", "PT", "PYI", "Q", "R", "RUF", "W"]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["advent_of_code"]
lines-between-types = 1

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ty.rules]
unresolved-import = "ignore"
