[flake8]
ignore =
    # not pep8, black adds whitespace before ':'
    E203,
    # not pep8, black adds line break before binary operator
    W503,
    # FileNotFoundError
    E902,
max_line_length = 88
max_complexity=10

[metadata]
name = advent_of_code
version = 0.0.1

[options]
install_requires =
    attrs
    click
    Jinja2
packages = find_namespace:
package_dir =
    = advent_of_code
include_package_data = True

[options.packages.find]
where = advent_of_code
exclude =
    test
    test.*

[options.package_data]
advent_of_code = py.typed

[options.entry_points]
console_scripts =
    hello_world=advent_of_code._cli.hello_world:hello
    aoc=advent_of_code._cli.aoc:main
